[gd_scene load_steps=24 format=2]

[ext_resource path="res://Sprites/Resource files/objPlayerSprites.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Objects/Player/playerWallCheck.gd" type="Script" id=2]
[ext_resource path="res://Objects/Player/PlayerCamera2D.gd" type="Script" id=3]
[ext_resource path="res://Objects/Player/PlayerAnimatedSprite.gd" type="Script" id=4]
[ext_resource path="res://Objects/Player/KinematicBody2D.gd" type="Script" id=5]
[ext_resource path="res://Objects/Player/LEvida.gd" type="Script" id=6]
[ext_resource path="res://Objects/Player/LEinvencible.gd" type="Script" id=7]
[ext_resource path="res://SFX Files/HD SFX - Jump.wav" type="AudioStream" id=8]
[ext_resource path="res://SFX Files/HD SFX - Ground pound_1.wav" type="AudioStream" id=9]
[ext_resource path="res://SFX Files/HD SFX - Ground pound_2.wav" type="AudioStream" id=10]
[ext_resource path="res://SFX Files/HD SFX - Ground pound_3.wav" type="AudioStream" id=11]
[ext_resource path="res://SFX Files/HD SFX - Dash.wav" type="AudioStream" id=12]
[ext_resource path="res://SFX Files/HD SFX - Kick.wav" type="AudioStream" id=13]
[ext_resource path="res://SFX Files/HD SFX - Punch_3.wav" type="AudioStream" id=14]
[ext_resource path="res://SFX Files/HD SFX - Punch_1.wav" type="AudioStream" id=15]
[ext_resource path="res://SFX Files/HD SFX - Punch_2.wav" type="AudioStream" id=16]
[ext_resource path="res://Objects/Player/Pause.gd" type="Script" id=17]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 6.80063 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12, 16 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 21.001 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6, 15 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 13, 1 )

[node name="obj_Player" type="KinematicBody2D" groups=[
"playerGroup",
]]
position = Vector2( 176, 176 )
z_index = 10
script = ExtResource( 5 )

[node name="jumpBuffer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = ExtResource( 1 )
animation = "idle"
frame = 3
playing = true
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="gpHit" type="Area2D" parent="AnimatedSprite"]
visible = false
scale = Vector2( 0.5, 0.5 )

[node name="gpGolpe" type="CollisionShape2D" parent="AnimatedSprite/gpHit"]
modulate = Color( 0.992157, 0.0196078, 0.564706, 1 )
position = Vector2( 0, 32 )
shape = SubResource( 1 )
disabled = true

[node name="gpSplash" type="CollisionShape2D" parent="AnimatedSprite/gpHit"]
modulate = Color( 0.984314, 0.0196078, 0.447059, 1 )
position = Vector2( 0, 40 )
shape = SubResource( 2 )
disabled = true

[node name="punchLhit" type="Area2D" parent="AnimatedSprite"]
visible = false

[node name="golpe" type="CollisionShape2D" parent="AnimatedSprite/punchLhit"]
modulate = Color( 0.772549, 0.0862745, 0.0862745, 1 )
position = Vector2( 4, 4 )
shape = SubResource( 3 )
disabled = true
__meta__ = {
"_edit_group_": true,
"_editor_description_": ""
}

[node name="uppercutHit" type="Area2D" parent="AnimatedSprite"]

[node name="gpUpper" type="CollisionShape2D" parent="AnimatedSprite/uppercutHit"]
modulate = Color( 0.984314, 0.0196078, 0.447059, 1 )
position = Vector2( 6, -2.5 )
shape = SubResource( 4 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 6 )
scale = Vector2( 2, 2 )
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
process_mode = 0
smoothing_enabled = true
smoothing_speed = 20.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="LEvida" type="LineEdit" parent="Camera2D/CanvasLayer"]
visible = false
margin_left = 13.0
margin_top = 438.0
margin_right = 126.0
margin_bottom = 462.0
rect_scale = Vector2( 2.46354, 1.42162 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LEinvencible" type="LineEdit" parent="Camera2D/CanvasLayer"]
visible = false
margin_left = 582.0
margin_top = 437.0
margin_right = 692.0
margin_bottom = 461.0
rect_scale = Vector2( 2.46354, 1.42162 )
align = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wallCheck" type="Area2D" parent="."]
position = Vector2( 1, 0 )
collision_layer = 17
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wallCheck"]
modulate = Color( 0.614477, 0.882813, 0.0241394, 1 )
self_modulate = Color( 0.996094, 0.996094, 0.996094, 1 )
position = Vector2( -2, 1 )
shape = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="colLeft" type="RayCast2D" parent="."]
position = Vector2( -13, 32 )
rotation = 3.10669
enabled = true
cast_to = Vector2( 0, 48 )

[node name="colRight" type="RayCast2D" parent="."]
position = Vector2( 11, 32 )
rotation = 0.0349066
enabled = true
cast_to = Vector2( 0, -48 )

[node name="colFloor" type="RayCast2D" parent="."]
position = Vector2( -12.5962, 36 )
rotation = -1.55334
enabled = true
cast_to = Vector2( 0, 23 )

[node name="jumpSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "SFX"

[node name="gpSFX_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "SFX"

[node name="gpSFX_2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = 2.0
bus = "SFX"

[node name="gpSFX_3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -2.0
bus = "SFX"

[node name="dashSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
bus = "SFX"

[node name="kickSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -5.0
bus = "SFX"

[node name="punchSFX_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
bus = "SFX"

[node name="punchSFX_2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
bus = "SFX"

[node name="punchSFX_3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
bus = "SFX"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="Pause" type="Control" parent="CanvasLayer"]
pause_mode = 2
margin_left = 176.0
margin_top = 176.0
margin_right = 216.0
margin_bottom = 216.0
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blackOverlay" type="ColorRect" parent="CanvasLayer/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -176.0
margin_top = -176.0
margin_right = 648.0
margin_bottom = 264.0
color = Color( 0, 0, 0, 0.45098 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="AnimatedSprite/gpHit" to="." method="_on_gpHit_area_entered"]
[connection signal="area_entered" from="AnimatedSprite/punchLhit" to="." method="_on_punchLhit_area_entered"]
[connection signal="area_entered" from="AnimatedSprite/uppercutHit" to="." method="_on_uppercutHit_area_entered"]
[connection signal="body_entered" from="wallCheck" to="." method="_on_wallCheck_body_entered"]
[connection signal="body_exited" from="wallCheck" to="." method="_on_wallCheck_body_exited"]
